Move docs to scripts
Entry point is always the makefile so it is not meaningful to have a docs directory.

--- a/scripts/doc-templates/api-endpoints.Rmd
+++ b/scripts/doc-templates/api-endpoints.Rmd
@@ -18,7 +18,7 @@ use_condaenv("epigraphdb_api", required = TRUE)
 ```{python py_init, include=FALSE}
 import sys
 
-sys.path.append('../')
+sys.path.append('../../')
 ```
 
 ```{python py_setup}
@@ -26,14 +26,14 @@ from environs import Env
 env = Env()
 env.read_env()
 
-EPIGRAPHDB_API_URL = env.str("EPIGRAPHDB_API_URL", "http://api.epigraphdb.org")
+EPIGRAPHDB_API_URL = env.str("EPIGRAPHDB_API_URL", "https://api.epigraphdb.org")
 print(EPIGRAPHDB_API_URL)
 ```
 
 ## Topic endpoints
 
 ```{python topic_endpoints, results='asis', echo=FALSE, message=FALSE, warning=FALSE}
-from docs.render_api import rmd_render_endpoints
+from scripts.render_api import rmd_render_endpoints
 from tests.api_tests.api_response.public_endpoints import topic_params
 
 print("\n")
@@ -43,7 +43,7 @@ rmd_render_endpoints(api_url=EPIGRAPHDB_API_URL, endpoint_params=topic_params)
 ## Utility endpoints
 
 ```{python util_endpoints, results='asis', echo=FALSE, message=FALSE, warning=FALSE}
-from docs.render_api import rmd_render_endpoints
+from scripts.render_api import rmd_render_endpoints
 from tests.api_tests.api_response.public_endpoints import util_params
 
 rmd_render_endpoints(api_url=EPIGRAPHDB_API_URL, endpoint_params=util_params)
