--- a/scripts/doc-templates/meta-nodes.Rmd
+++ b/scripts/doc-templates/meta-nodes.Rmd
@@ -14,8 +14,16 @@ use_condaenv("epigraphdb_api", required = TRUE)
 
 ```{python py_init, include=FALSE}
 import sys
+from pathlib import Path
 
-sys.path.append('../../')
+project_root = (Path.cwd() / ".." / "..").resolve()
+
+sys.path.append(str(project_root))
+```
+
+
+```{python py_foobar}
+print(sys.path)
 ```
 
 ```{python, results='asis', echo=FALSE}
