--- a/scripts/doc-templates/metrics.Rmd
+++ b/scripts/doc-templates/metrics.Rmd
@@ -22,9 +22,9 @@ sys.path.append(str(project_root))
 ```
 
 ```{python py_setup, include=FALSE}
-from epigraphdb_common_utils.api_docs_env_configs import configs
+from epigraphdb_common_utils.api_docs_env_configs import env_configs
 
-EPIGRAPHDB_API_URL = configs["api_url"]
+EPIGRAPHDB_API_URL = env_configs["api_url"]
 ```
 
 ```{python requests, results='asis', echo=FALSE, message=FALSE, warning=FALSE}
